@@ -1,3 +1,15 @@
+2010-11-08  Jessie Berlin  <jberlin@apple.com>
+
+        Reviewed by Adam Roben.
+
+        We should add a build step to comment out or remove the lines unsetting TEMP and TMP in the
+        .bashrc file.
+        https://bugs.webkit.org/show_bug.cgi?id=49189
+
+        * building/tools.html:
+        Add a line recommending bash shell users to comment out or remove those lines, with an
+        explanation as to why.
+
 2010-11-04  Orlando Leite  <orlleite@gmail.com>
 
         Reviewed by Adam Barth.
